[project]
name = "deepagents-acp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-client-protocol>=0.7.1",
    "deepagents>=0.3.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
